updateProduct